--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.4",
     "axios": "^1.6.0",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.11.2",
@@ -20,11 +22,12 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
