--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.4",
+    "@types/jest": "^29.5.12",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/node": "^20.14.15",
+    "@types/qs": "^6.9.15",
     "axios": "^1.6.0",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.11.2",
@@ -23,11 +25,11 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "sass": "^1.69.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
