--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^6.2.0",
     "prettier": "^3.0.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-rewrite-all": "^1.0.2"
   }
 }
