--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://theanderson11.github.io/pizza-shop/",
   "name": "pizzas-show-case-website",
   "private": true,
   "version": "0.0.0",
