--- a/backend/package.json
+++ b/backend/package.json
@@ -2,18 +2,18 @@
     "name": "mongodb",
     "version": "1.0.0",
     "main": "db.js",
-    "type": "commonjs",
+    "type": "module",
     "scripts": {
-      "dev": "nodemon server.js"
+        "dev": "nodemon server.js"
     },
     "author": "",
     "license": "ISC",
     "description": "",
     "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.21.2",
-      "mongodb": "^6.13.1",
-      "nodemon": "^3.1.9"
+        "cors": "^2.8.5",
+        "express": "^4.21.2",
+        "mongodb": "^6.13.1",
+        "mongoose": "^8.11.0",
+        "nodemon": "^3.1.9"
     }
-  }
-  
+}
